# ECE4821Jp2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
.gitea/: PULL_REQUEST_TEMPLATE.md
.gitea/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_BUG.md  ISSUE_TEMPLATE_FEAT.md  ISSUE_TEMPLATE_PERF.md  ISSUE_TEMPLATE_SCRUM.md  ISSUE_TEMPLATE_SPRINT.md
.gitea/workflows/: push.yaml  release.yaml
src/: main.cpp
src/db/: Database.cpp  Database.h  Table.cpp  Table.h
src/query/: Query.cpp  Query.h  QueryBuilders.cpp  QueryBuilders.h  QueryHelpers.h  QueryParser.cpp  QueryParser.h  QueryPriority.h  QueryResult.cpp  QueryResult.h
src/query/data/: AddQuery.cpp  AddQuery.h  CountQuery.cpp  CountQuery.h  DeleteQuery.cpp  DeleteQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  InsertQuery.cpp  InsertQuery.h  MaxQuery.cpp  MaxQuery.h  MinQuery.cpp  MinQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SubQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h  UpdateQuery.cpp  UpdateQuery.h
src/query/management/: CopyTableQuery.cpp  CopyTableQuery.h  DropTableQuery.cpp  DropTableQuery.h  DumpTableQuery.cpp  DumpTableQuery.h  ListTableQuery.cpp  ListTableQuery.h  ListenQuery.cpp  ListenQuery.h  LoadTableQuery.cpp  LoadTableQuery.h  PrintTableQuery.cpp  PrintTableQuery.h  QuitQuery.cpp  QuitQuery.h  TruncateTableQuery.cpp  TruncateTableQuery.h
src/runtime/: LockManager.cpp  LockManager.h  PopUpExecutor.cpp  PopUpExecutor.h  PriorityQueueManager.h  QueryExecutor.cpp  QueryExecutor.h  QueryTask.h  Runtime.cpp  Runtime.h  SimplePQManager.h  Threadpool.cpp  Threadpool.h  WorkerPool.h
src/scheduler/: DependencyManager.cpp  DependencyManager.h  FileDependencyManager.cpp  FileDependencyManager.h  FileResourceManager.h  GlobalIndex.cpp  GlobalIndex.h  ScheduledItem.h  TableQueue.h  TaskQueue.cpp  TaskQueue.h  TaskQueueDeps.cpp  TaskQueueFetch.cpp
src/utils/: ArgParser.cpp  ArgParser.h  FallbackAnalyzer.cpp  FallbackAnalyzer.h  formatter.h  uexception.h
test/: run.sh
test/output/: aggregate.out  arithmetic.out  manipulation.out  minmax.out
test/query/: aggregate.query  arithmetic.query  manipulation.query  minmax.query
test/table/: aggregate.tbl  arithmetic.tbl  manipulation.tbl  minmax.tbl
tools/: commit-msg  cpp-format  cq-clang-tidy  cq-cppcheck  cq-cpplint  file-length  hook-init  pre-commit
